--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,15 +85,14 @@ juggler:default:
   needs:
     - version
   script:
-    - CACHEBUST=`date +%s`
     - git clone https://eicweb.phy.anl.gov/containers/eic_container.git
     - ./eic_container/gitlab-ci/docker_login.sh --ci -n $DOCKER_NTRIES -t $DOCKER_WAIT_TIME
     - echo ${CI_COMMIT_BRANCH}
     - docker build -t ${CI_REGISTRY_IMAGE}/${BUILD_IMAGE}:${INTERNAL_TAG}
                    -f eic_container/containers/jug/xl.Dockerfile
                    --build-arg INTERNAL_TAG=${EIC_DEV_TAG}
-                   --build-arg CACHEBUST=${CACHEBUST}
                    --build-arg JUGGLER_VERSION=${CI_COMMIT_REF_NAME}
+                   --build-arg JUG_VERSION=juggler-${INTERNAL_TAG}-$(git rev-parse HEAD)
                    eic_container/containers/jug
     - |
       if [ "$CI_COMMIT_BRANCH" == "master" ]; then
