--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 
+project(Juggler)
+
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(EICD REQUIRED)
@@ -12,17 +14,6 @@ set(PODIO $ENV{PODIO})
 set(CMAKE_MODULE_PATH CMAKE_MODULE_PATH PODIO)
 find_package(podio 0.11.0 REQUIRED)
 
-## There was a breaking change in how collections are stored in podio between
-## version v0.13.0 and v0.13.1. This checks for podio version and sets the 
-## PODIO_BEFORE_0_13_1 preprocessor variable
-if (${podio_VERSION_MAJOR} EQUAL 0 AND ${podio_VERSION_MINOR} LESS_EQUAL 13)
-  if (${podio_VERSION_MINOR} EQUAL 13 AND ${podio_VERSION_PATCH} EQUAL 0)
-    add_definitions("-DPODIO_BEFORE_0_13_1")
-  elseif (${podio_VERSION_MINOR} LESS 13)
-    add_definitions("-DPODIO_BEFORE_0_13_1")
-  endif()
-endif()
-
 include_directories(${podio_INCLUDE_DIR})
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
@@ -30,12 +21,13 @@ find_package(Geant4)
 
 find_library(genfit2 genfit2 /usr/local/lib REQUIRED)
 
-find_package(GaudiProject)
+find_package(Gaudi)
+add_subdirectory(JugBase)
+add_subdirectory(JugDigi)
+add_subdirectory(JugReco)
+add_subdirectory(JugTrack)
+gaudi_install(CMAKE)
 
-gaudi_project(Juggler v1r0
-              USE Gaudi v34r0)
-
-install(FILES ${CMAKE_BINARY_DIR}/run 
-  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ  GROUP_EXECUTE WORLD_READ  WORLD_EXECUTE 
-  DESTINATION bin/
-  )
+# create and install Juggler.xenv file as it still has a use-case
+# TODO: update workflow to not need xenv files anymore
+include(cmake/xenv.cmake)
