--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -1,7 +1,6 @@
 ################################################################################
 # Package: JugDigi
 ################################################################################
-gaudi_subdir(JugDigi v1r0)
 
 find_package(EICD REQUIRED)
 #set(PODIO $ENV{PODIO})
@@ -12,21 +11,9 @@ find_package(EICD REQUIRED)
 find_package(ROOT COMPONENTS RIO Tree Core REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
-# this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
-#gaudi_install_scripts()
-#gaudi_install_python_modules()
-
-#gaudi_add_library(JugBase
-#  src/*.cpp 
-#                  INCLUDE_DIRS EICD PODIO ROOT $ENV{HOME}/stow/podio/include
-#                  LINK_LIBRARIES GaudiAlgLib GaudiKernel ROOT DD4hep::DDG4IO
-#                  PUBLIC_HEADERS JugBase)
-#target_link_libraries(JugBase 
-#  podio::podioRootIO
-#  )
-
+file(GLOB JugDigiPlugins_sources src/components/*.cpp)
 gaudi_add_module(JugDigiPlugins
+  SOURCES
   src/components/CalorimeterHitDigi.cpp 
   src/components/CrystalEndcapsDigi.cpp 
   src/components/EMCalorimeterDigi.cpp 
@@ -36,18 +23,16 @@ gaudi_add_module(JugDigiPlugins
   src/components/PhotoMultiplierDigi.cpp 
   src/components/SOIPIXTrackerDigi.cpp 
   src/components/UFSDTrackerDigi.cpp 
-  LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd)
-target_compile_options(JugDigiPlugins PRIVATE -Wno-suggest-override)
+  LINK
+  Gaudi::GaudiAlgLib Gaudi::GaudiKernel
+  JugBase
+  ROOT::Core ROOT::RIO ROOT::Tree
+  NPDet::DD4podIO
+  EICD::eicd
+)
 
-#gaudi_add_test(ProduceForReadTest
-#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#               FRAMEWORK tests/options/simple_producer.py)
-gaudi_add_test(ExCaloDigi
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/example_calodigi.py
-               )
-#gaudi_add_test(CheckReadCollectionSize
-#               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
-#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#               COMMAND python FWCore/tests/scripts/check_coll_after_read.py
-#               DEPENDS ReadTest)
+target_include_directories(JugDigiPlugins PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+
+target_compile_options(JugDigiPlugins PRIVATE -Wno-suggest-override)
