Added doxygen pages in CI
- should end up at eic.phy.anl.gov/juggler

	modified:   .gitlab-ci.yml
	modified:   README.md
	new file:   doc/Doxyfile
	new file:   doc/doxygen-awesome-sidebar-only-darkmode-toggle.css
	new file:   doc/doxygen-awesome-sidebar-only.css
	new file:   doc/doxygen-awesome.css
	new file:   doc/doxygen-custom/custom.css
	new file:   doc/doxygen-custom/footer.html
	new file:   doc/doxygen-custom/header.html

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -165,6 +165,20 @@ benchmarks:physics:
     strategy: depend
   allow_failure: false
 
+pages:
+  image: eicweb.phy.anl.gov:4567/containers/eic_container/alpine
+  stage: deploy
+  rules:
+    - if: '$CI_SERVER_HOST == "gitlab.phy.anl.gov" && $CI_COMMIT_BRANCH == "master"' 
+  script:
+    - apk update && apk add doxygen  graphviz ttf-ubuntu-font-family
+    - cd doc && doxygen Doxyfile  && cd ..
+    - mkdir -p public && cp -r doc/docs/html/* public/.
+  artifacts:
+    paths:
+    - public
+
+
 cleanup:
   stage: finalize
   rules:
