Added ACTS Bfield wrapper for dd4hep fields.
- Use the field map and beamline magnetic fields as defined via compact
detector description.
- There is probably a better implementation but this is the most direct.

--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -17,7 +17,7 @@ gaudi_add_library(JugBase
   src/Utilities/Paths.cpp
   src/Utilities/Options.cpp
   src/Plugins/BFieldOptions.cpp
-  #src/Plugins/BFieldScalor.cpp
+  src/Plugins/DD4hepBField.cpp
   src/Plugins/BFieldUtils.cpp
   LINK
   Gaudi::GaudiKernel Gaudi::GaudiAlgLib
