Tracking hit collector2

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -10,6 +10,7 @@ file(GLOB JugRecoPlugins_sources src/components/*.cpp)
 gaudi_add_module(JugRecoPlugins
   SOURCES
   src/components/TrackingHitsCollector.cpp 
+  src/components/TrackingHitsCollector2.cpp 
   src/components/TrackerHitReconstruction.cpp 
   src/components/SimpleClustering.cpp 
   src/components/CalorimeterHitReco.cpp 
