--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -8,6 +8,9 @@ find_package(ROOT COMPONENTS RIO Tree Core REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 find_library(genfit2 genfit2 /usr/local/lib REQUIRED)
 
+
+ROOT_GENERATE_DICTIONARY(G__JugBase JugBase/DataHandle.h LINKDEF JugBaseLinkDef.h)
+
 gaudi_add_library(JugBase
   SOURCES
   src/ACTSLogger.cpp
@@ -16,6 +19,7 @@ gaudi_add_library(JugBase
   src/Utilities/Helpers.cpp
   src/Utilities/Paths.cpp
   src/Plugins/DD4hepBField.cpp
+  G__JugBase.cxx
   LINK
   Gaudi::GaudiKernel Gaudi::GaudiAlgLib
   podio::podioRootIO
@@ -24,6 +28,10 @@ gaudi_add_library(JugBase
   ActsCore ActsPluginDD4hep
   ${genfit2}
 )
+
+add_custom_target(JugBase_ROOTDICTS DEPENDS G__JugBase.cxx )
+add_dependencies(JugBase JugBase_ROOTDICTS)
+
 
 target_include_directories(JugBase PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
@@ -66,6 +74,13 @@ install(TARGETS JugBase JugBasePlugins
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
   COMPONENT dev)
+
+install(
+   FILES  
+   ${CMAKE_CURRENT_BINARY_DIR}/libJugBase_rdict.pcm 
+   ${CMAKE_CURRENT_BINARY_DIR}/libJugBase.rootmap
+   DESTINATION lib )
+ 
 
 if(BUILD_TESTING)
   enable_testing()
