--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,13 @@ variables:
   EIC_DEV_TAG: "testing"
   JUGGLER_IMAGE: "juggler"
   DEFAULT_TAG: "testing"
-  NPDET_VERSION: "master"
-  EICD_VERSION: "master"
-  DETECTOR_VERSION: "master"
-  IP6_VERSION: "master"
+
+  ## Other versions to be included in the container. In general these should be "master"
+  ## to keep the container functionally identical to jug_xl:nightly
+  JUGGLER_NPDET_VERSION: "master"
+  JUGGLER_EICD_VERSION: "master"
+  JUGGLER_DETECTOR_VERSION: "master"
+  JUGGLER_IP6_VERSION: "master"
 
   ## We have:
   ##   - Juggler triggers eic_container on a master pipeline
@@ -97,10 +100,10 @@ juggler:default:
                    -f eic_container/containers/jug/xl.Dockerfile
                    --build-arg INTERNAL_TAG=${EIC_DEV_TAG}
                    --build-arg JUGGLER_VERSION=${CI_COMMIT_REF_NAME}
-                   --build-arg NPDET_VERSION=${NPDET_VERSION}
-                   --build-arg EICD_VERSION=${EICD_VERSION}
-                   --build-arg DETECTOR_VERSION=${DETECTOR_VERSION}
-                   --build-arg IP6_VERSION=${IP6_VERSION}
+                   --build-arg NPDET_VERSION=${JUGGLER_NPDET_VERSION}
+                   --build-arg EICD_VERSION=${JUGGLER_EICD_VERSION}
+                   --build-arg DETECTOR_VERSION=${JUGGLER_DETECTOR_VERSION}
+                   --build-arg IP6_VERSION=${JUGGLER_IP6_VERSION}
                    --build-arg JUG_VERSION=juggler-${INTERNAL_TAG}-$(date +%Y-%m-%d_%H-%M-%S)-$(git rev-parse HEAD)
                    eic_container/containers/jug
     - |
