Restructure plugins and remove stale plugins
- Create JugPID and JugFast to avoid overloading the JugReco namespace
- Calorimeter clustering not yet split off to not disrupt ongoing studies
- Removed stale algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ find_library(genfit2 genfit2 /usr/local/lib REQUIRED)
 find_package(Gaudi)
 add_subdirectory(JugBase)
 add_subdirectory(JugDigi)
+add_subdirectory(JugFast)
+add_subdirectory(JugPID)
 add_subdirectory(JugReco)
 add_subdirectory(JugTrack)
 gaudi_install(CMAKE)
