--- a/JugPID/CMakeLists.txt
+++ b/JugPID/CMakeLists.txt
@@ -1,23 +1,16 @@
 ################################################################################
-# Package: JugDigi
+# Package: JugPID
 ################################################################################
 
 find_package(EICD REQUIRED)
-#set(PODIO $ENV{PODIO})
-#set(CMAKE_MODULE_PATH CMAKE_MODULE_PATH PODIO)
-#find_package(podio 0.11.01 REQUIRED)
-#include_directories(${podio_INCLUDE_DIR})
 
 find_package(ROOT COMPONENTS RIO Tree Core REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
-file(GLOB JugDigiPlugins_sources src/components/*.cpp)
-gaudi_add_module(JugDigiPlugins
+gaudi_add_module(JugPIDPlugins
   SOURCES
-  src/components/CalorimeterHitDigi.cpp 
-  src/components/PhotoMultiplierDigi.cpp 
-  src/components/UFSDTrackerDigi.cpp 
-  src/components/SiliconTrackerDigi.cpp 
+  src/components/FuzzyKClusters.cpp 
+  src/components/PhotoRingClusters.cpp
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
@@ -26,8 +19,8 @@ gaudi_add_module(JugDigiPlugins
   EICD::eicd
 )
 
-target_include_directories(JugDigiPlugins PUBLIC
+target_include_directories(JugPIDPlugins PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
-target_compile_options(JugDigiPlugins PRIVATE -Wno-suggest-override)
+target_compile_options(JugPIDPlugins PRIVATE -Wno-suggest-override)
