--- a/JugFast/CMakeLists.txt
+++ b/JugFast/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
 gaudi_add_module(JugFastPlugins
   SOURCES
+  src/components/MatchClusters.cpp 
   src/components/MC2SmearedParticle.cpp 
   src/components/ParticlesWithTruthPID.cpp 
   src/components/SmearedFarForwardParticles.cpp 
