Added truth cluster merger algorithms
Added truth cluster merger

	modified:   JugFast/CMakeLists.txt
	new file:   JugFast/src/components/ClusterMerger.cpp
	modified:   JugFast/src/components/MatchClusters.cpp
	new file:   JugFast/src/components/TruthEnergyPositionClusterMerger.cpp

--- a/JugFast/CMakeLists.txt
+++ b/JugFast/CMakeLists.txt
@@ -9,10 +9,12 @@ find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
 gaudi_add_module(JugFastPlugins
   SOURCES
+  src/components/ClusterMerger.cpp 
   src/components/MatchClusters.cpp 
   src/components/MC2SmearedParticle.cpp 
   src/components/ParticlesWithTruthPID.cpp 
   src/components/SmearedFarForwardParticles.cpp 
+  src/components/TruthEnergyPositionClusterMerger.cpp
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
