Resolve "Inclusive kinematics reconstruction based on electron"

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -28,6 +28,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/ImagingPixelDataSorter.cpp 
   src/components/ImagingTopoCluster.cpp 
   src/components/ImagingClusterReco.cpp 
+  src/components/InclusiveKinematicsElectron.cpp
   src/components/PhotoMultiplierReco.cpp
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
