--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ project(Juggler VERSION 4.0.0)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(EICD REQUIRED)
-#set(CMAKE_PREFIX_PATH $ENV{HOME}/lib CMAKE_PREFIX_PATH)
-find_package(NPDet  REQUIRED)
+find_package(NPDet REQUIRED)
 #---------------------------------------------------------------
 # to use ROOT targets, find_package ROOT must come before find_package Gaudi
 # (for now) # see issue Gaudi#103
@@ -18,11 +17,14 @@ set(CMAKE_MODULE_PATH CMAKE_MODULE_PATH PODIO)
 find_package(podio 0.11.0 REQUIRED)
 
 include_directories(${podio_INCLUDE_DIR})
-find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
+find_package(ROOT COMPONENTS Core RIO Tree MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 find_package(Geant4)
 
+find_package(Acts REQUIRED COMPONENTS Core PluginIdentification PluginTGeo PluginDD4hep )
+
 find_library(genfit2 genfit2 /usr/local/lib REQUIRED)
+find_path(genfit2_INCLUDE_DIR NAMES GFGbl.h PATHS /usr/local/include ${genfit2}/../include REQUIRED)
 
 find_package(Gaudi)
 add_subdirectory(JugBase)
