add quantum efficiency

--- a/JugPID/CMakeLists.txt
+++ b/JugPID/CMakeLists.txt
@@ -6,7 +6,7 @@ gaudi_add_module(JugPIDPlugins
   SOURCES
   src/components/FuzzyKClusters.cpp 
   src/components/PhotoRingClusters.cpp
-  src/components/TestIRT.cpp
+  src/components/TestIRTAlgorithm.cpp
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
