--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -25,6 +25,8 @@ gaudi_add_module(JugRecoPlugins
   src/components/ImagingTopoCluster.cpp 
   src/components/ImagingClusterReco.cpp 
   src/components/InclusiveKinematicsElectron.cpp
+  src/components/InclusiveKinematicsJB.cpp
+  src/components/InclusiveKinematicsDA.cpp
   src/components/PhotoMultiplierReco.cpp
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
